[project]
name = "boot-dev"
version = "0.1.0"
description = "boot.dev coding exercises"
authors = [
    { name = "bernd3k", email = "58431264+bernd3k@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]

[tool.ruff.lint]
# On top of the default 'select' ('E4', 'E7', 'E9', and 'F'), enable flake8-bugbear ('B'), isort ('I').
extend-select = ["B", "I"]
