[project]
name = "ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-genai==1.12.1",
    "python-dotenv==1.1.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "ruff>=0.15.1",
]

[tool.ruff.lint]
# On top of the default 'select' ('E4', 'E7', 'E9', and 'F'), enable flake8-bugbear ('B'), isort ('I').
extend-select = ["B", "I"]
